# casemk

./: README.md  case.scad  case_12.scad  case_fixed.scad  case_mixed.scad  case_rounded.scad  case_stack.scad  case_stack_rounded.scad  case_test.scad  example_grid_12.scad  example_grid_auto.scad  example_mixed.scad  pyproject.toml
casemk/: __init__.py  __main__.py  cli.py  config.py  geometry.py  layout.py
examples/: example_usage.py
